# -*- coding: utf-8 -*-

2008-09-24  Eric Hodel  <drbrain@segment7.net>

	* doc/release_notes/rel_1_3_0.rdoc:  Final release notes for 1.3.0.
	* lib/rubygems/rubygems_version.rb:  1.3.0.
	* lib/rubygems/builder.rb:  Examine process status correctly.  Patch
	  by Nobu.
	* test/test_gem_ext_rake_builder.rb:  Override Gem.ruby and
	  ENV['rake'] for 1.9 integration.  Patch by Nobu.

2008-09-16  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Only create ~/.gem by user owning ~.  Bug #21561
	by Neil Wilson.

2008-09-15  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_index.rb:  Autoload SpecFetcher to improve load
	time.  Patch #21577 by Simon Chiang.
	* lib/rubygems/commands/lock_command.rb:  Modernize.  Fix --strict.
	Patch #21814 by Sven Engelhardt.
	* lib/rubygems/platform.rb:  Fix for solaris platform.  Patch #21911
	by Bob Remeika.

2008-09-10  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/install_command.rb:  Describe _version_ in `gem
	help install`.
	* lib/rubygems/commands/environment_command.rb:  Describe environment
	variables and gemrc in `gem help env`.
	* lib/rubygems.rb:  Warn when executing Gem::manage_gems.
	* lib/rubygems/doc_manager.rb:  Have RubyGems update the ri cache.
	* lib/rubygems/source_index.rb:  Ensure specs are read as UTF-8.
	* lib/rubygems/specification.rb:  Add magic comment to .gemspec files
	so they are read in as UTF-8.

2008-08-22  Luis Lavena  <luislavena@gmail.com>

	* lib/rubygems.rb: Corrected usage of HOMEDRIVE and HOMEPATH on Windows.
	Escape Gem.ruby if spaces in the path are present. Solves bug related to
	extensions compile process.
	* test/test_gem.rb: Added test to verify both conditions.

2008-08-17  Eric Hodel  <drbrain@segment7.net>

	* doc/release_notes/rel_1_3_0.rdoc:  Initial release notes for 1.3.0.
	* util/CL2notes:  Release note creation helper script.

2008-08-16  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/local_remote_options.rb:  Added #both? to complement