@@ -709,9 +709,11 @@ module Gem
 
     @gem_path.uniq!
     @gem_path.each do |path|
-      if 0 == File.expand_path(path).index(Gem.user_home) and
-         Etc.getpwuid.uid != File::Stat.new(Gem.user_home).uid then
-        next # only create by matching user
+      if 0 == File.expand_path(path).index(Gem.user_home)
+        unless win_platform? then
+          # only create by matching user
+          next if Etc.getpwuid.uid != File::Stat.new(Gem.user_home).uid
+        end
       end
       ensure_gem_subdirectories path
     end
